<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111"
    tools:context=".BtnControllerFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Door Section  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/doorBtnController"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/doorBtnController" />

            <Button
                android:id="@+id/doorBtnControllerOpen"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/doorWindowBtnControllerOpen" />

            <Button
                android:id="@+id/doorBtnControllerClose"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/doorWindowBtnControllerClose" />
        </LinearLayout>

        <View
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>



        <!-- Window Section  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/windowBtnController"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/windowBtnController" />

            <Button
                android:id="@+id/windowBtnControllerOpen"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/doorWindowBtnControllerOpen" />

            <Button
                android:id="@+id/windowBtnControllerClose"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/doorWindowBtnControllerClose" />
        </LinearLayout>
        <View
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <!-- Light Section  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lightBtnController"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/lightBtnController" />

            <Button
                android:id="@+id/lightBtnControllerOpen"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/lightBtnControllerTurnOn" />

            <Button
                android:id="@+id/lightBtnControllerClose"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/lightBtnControllerTurnOff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            >

            <Button
                android:id="@+id/goSpeech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:text="@string/goSpeech" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>